syntax = "proto3";
package wasm.options.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/wasm";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;

import "google/protobuf/any.proto";

/*
    Options config for WASM filters
*/
message PluginSource {
    // list of WASM filters to be added into the filter chain
    repeated WasmFilter filters = 1;
}

/*
    This message defines a single Envoy WASM filter to be placed into the filter chain
*/
message WasmFilter {

    oneof src {
        // name of image which houses the compiled wasm filter
        string image = 2;
        // path from which to load wasm filter from disk
        string file_path = 8;
    }

    // Filter/service configuration used to configure or reconfigure a plugin
    // (proxy_on_configuration).
    // `google.protobuf.Struct` is serialized as JSON before
    // passing it to the plugin. `google.protobuf.BytesValue` and
    // `google.protobuf.StringValue` are passed directly without the wrapper.
    google.protobuf.Any config = 3;

    // the stage in the filter chain where this filter should be placed
    FilterStage filter_stage = 4;

    // the name of the filter, used for logging
    string name = 5;

    // the root_id of the filter which should be run, if this value is incorrect, or
    // empty the filter will crash
    string root_id = 6;

    // represents the different types of WASM VMs available with which envoy can run
    // the WASM filter module
    enum VmType {
        V8 = 0;
        WAVM = 1;
    }

    // selected VM type
    VmType vm_type = 7;
}


message FilterStage {
    // list of filter stages which can be selected for a WASM filter
    enum Stage {
        FaultStage = 0;
        CorsStage = 1;
        WafStage = 2;
        AuthNStage = 3;
        AuthZStage = 4;
        RateLimitStage = 5;
        AcceptedStage = 6;
        OutAuthStage = 7;
        RouteStage = 8;
    }

    // During is the 0th member so that it is the default, even though
    // the reading order can be a little confusing
    enum Predicate {
        During = 0;
        Before = 1;
        After = 2;
    }

    // stage of the filter chain in which the selected filter should be added
    Stage stage = 1;
    // How this filter should be placed relative to the stage
    Predicate predicate = 2;
}